--- a/styles/site.less
+++ b/styles/site.less
@@ -233,172 +233,19 @@ p {
 
 //  Headings
 
-.responsive-font-size-h1 {
-  @media screen and (max-width: 640px) {
-    .max-font-size (32px, @tweak-h1-font-font-size, @tweak-h1-font-letter-spacing);
-  }
-}
-.responsive-font-size-h2 {
-  @media screen and (max-width: 640px) {
-    .max-font-size (28px, @tweak-h2-font-font-size, @tweak-h2-font-letter-spacing);
-  }
-}
-.responsive-font-size-h3 {
-  @media screen and (max-width: 640px) {
-    .max-font-size (24px, @tweak-h3-font-font-size, @tweak-h3-font-letter-spacing);
-  }
-}
-
-h1, h2, h3 {
-
-  text-rendering: optimizeLegibility;
-
-  &:first-child { margin-top: 0; }
-  &:last-child { margin-bottom: 0; }
-
-}
-
-h1 {
-
-  .tweak-h1-font;
-  .responsive-font-size-h1;
-
-}
-
-h2 {
-
-  .tweak-h2-font;
-  .responsive-font-size-h2;
-
-}
-
-h3 {
-
-  .tweak-h3-font;
-  .responsive-font-size-h3;
-
-}
-
-h1 + h1, h1 + h2, h1 + h3,
-h2 + h1, h2 + h2, h2 + h3,
-h3 + h1, h3 + h2, h3 + h3 {
-
-  margin-top: 15px;
-
-}
-
-.mixin-template-heading-color(@tweak-h1-color, @tweak-h2-color, @tweak-h3-color);
-
-@media screen and (max-width: 640px) {
-  h1, h2, h3 {
-    .hyphens(auto);
-  }
-}
-
-
-
 // -----------------------------------------
 
 //  Links
 
-a {
-
-  color: inherit;
-  text-decoration: none;
-
-  &:active,
-  &:focus {
-
-    // Remove dotted outline
-    outline: 0;
-
-  }
-
-}
-
-.mixin-template-link-color(@tweak-link-color);
-
-
-
 // -----------------------------------------
 
 //  Lines
-
-.mixin-template-line-color(@tweak-line-color);
-
-
-
 
 // =======================================================
 
 //    Site
 
 // =======================================================
-
-
-.Site {
-
-  .mixin-site-border-mobile-bar-color-top (@border-color, @mobile-bar-color) when (rgba(red(@mobile-bar-color), green(@mobile-bar-color), blue(@mobile-bar-color), 1) = @border-color) {
-    border-top: 0;
-  }
-  .mixin-site-border-mobile-bar-color-bottom (@border-color, @mobile-bar-color) when (rgba(red(@mobile-bar-color), green(@mobile-bar-color), blue(@mobile-bar-color), 1) = @border-color) {
-    border-bottom: 0;
-  }
-
-  .tweak-site-border-show & {
-    border: @tweak-site-border-width solid @tweak-site-border-color;
-    .responsive-border(@tweak-site-border-width);
-
-
-    // Hide border on top/bottom if respective
-    // mobile bar background colors are the same
-    // as border color.
-    @media screen and (max-width: @tweak-mobile-breakpoint) {
-      .mixin-site-border-mobile-bar-color-top(@tweak-site-border-color, @tweak-mobile-bar-top-background-color);
-      .mixin-site-border-mobile-bar-color-bottom(@tweak-site-border-color, @tweak-mobile-bar-bottom-background-color);
-    }
-
-  }
-
-  .tweak-site-width-option-constrained-width & {
-
-    max-width: @tweak-site-width;
-    margin-left: auto; margin-right: auto;
-
-  }
-
-
-  &-inner {
-
-    position: relative;
-
-  }
-
-}
-
-
-// Width
-.Header-inner,
-.Intro-content,
-.Main-content,
-.Footer-inner,
-.Index-page-content {
-
-  .tweak-site-width-option-full-background & {
-
-    max-width: @tweak-site-width;
-    margin-left: auto; margin-right: auto;
-
-  }
-
-}
-
-
-
-
-
-
-
 
 // =======================================================
 
@@ -877,4 +724,8 @@ a {
   // This line forces the text color to the default dark color defined above,
   // or the tweak-defined @newsletterTextColor if that color is darker than the default.
   color: contrast(#ffffff, @defaultDarkNewsletterTextColor, @newsletterTextColor);
+}
+
+.Site-inner {
+  display: none;
 }
