--- a/scripts/scss/_partials/header.scss
+++ b/scripts/scss/_partials/header.scss
@@ -34,7 +34,7 @@
     flex-direction: column;
     justify-content: flex-start;
     left: 0;
-    padding: calc(.5 * var(--col-width));
+    padding: calc(.5 * var(--col-width)) 0;
     position: absolute;
     right: 0;
     top: 0;
