--- a/scripts/theme.css
+++ b/scripts/theme.css
@@ -50,7 +50,7 @@
   --type-size-larger: calc(1.175 * var(--type-size-clamp));
   --typeSizeHeading: clamp(1.4rem, .9vw, 2rem);
   --type-size-heading: var(--typeSizeHeading);
-  --letterSpacingHeading: -0.015vw;
+  --letterSpacingHeading: -0.0225vw;
   --type-size-heading-smaller: 1.025rem;
   --type-size-tagline: 1.125vw;
   --type-size-heading-mobile: 4.125vw;
@@ -5415,7 +5415,7 @@ footer {
   flex-direction: column;
   justify-content: flex-start;
   left: 0;
-  padding: calc(0.5 * var(--col-width));
+  padding: calc(0.5 * var(--col-width)) 0;
   position: absolute;
   right: 0;
   top: 0;
