--- a/scripts/scss/_partials/variables.scss
+++ b/scripts/scss/_partials/variables.scss
@@ -6,11 +6,19 @@
   src: url(Safiro.ttf);
 }
 
+@font-face {
+  font-family: eiko;
+  font-style: normal;
+  font-weight: 300;
+  src: url(PPEiko-Regular.ttf);
+}
+
 :root {
   
   
   --colorBG: #f5f5f5;
   --colorFooterBG: #4e4b4b;
+  --colorFooterBG: #222;
   --colorFooterType: var(--colorBG);
   --color-bg-light: #f8f8f8;
   --color-bg-grey: #e4dedc;
@@ -39,7 +47,7 @@
   // footer
   // ===============================
   
-  --colorBorderFooter: rgba(255, 255, 255, .2);
+  --colorBorderFooter: rgba(255, 255, 255, .15);
   
   --color-footer-link: #b7b5a7;
   
@@ -69,7 +77,7 @@
   --type-size-clamp: clamp(12.175px, .925vw, var(--type-size));
   --type-size-clamp: clamp(11.175px, .925vw, 12.75px);
   --type-size-larger: calc(1.175 * var(--type-size-clamp));
-  --typeSizeHeading: clamp(1.4rem, .9vw, 2rem);
+  --typeSizeHeading: clamp(1.2rem, .9vw, 1.8rem);
   --type-size-heading: var(--typeSizeHeading);
   --letterSpacingHeading: -0.0225vw;
   
