--- a/scripts/scss/_partials/variables.scss
+++ b/scripts/scss/_partials/variables.scss
@@ -3,14 +3,14 @@
   font-family: safiro;
   font-style: normal;
   font-weight: 300;
-  src: url(Safiro.ttf);
+  src: url(https://jdarcyhayward.github.io/modern/scripts/Safiro.ttf);
 }
 
 @font-face {
   font-family: eiko;
   font-style: normal;
   font-weight: 300;
-  src: url(PPEiko-Regular.ttf);
+  src: url(https://jdarcyhayward.github.io/modern/scripts/PPEiko-Regular.ttf);
 }
 
 :root {
