--- a/scripts/theme.css
+++ b/scripts/theme.css
@@ -3,13 +3,13 @@
   font-family: safiro;
   font-style: normal;
   font-weight: 300;
-  src: url(Safiro.ttf);
+  src: url(https://jdarcyhayward.github.io/modern/scripts/Safiro.ttf);
 }
 @font-face {
   font-family: eiko;
   font-style: normal;
   font-weight: 300;
-  src: url(PPEiko-Regular.ttf);
+  src: url(https://jdarcyhayward.github.io/modern/scripts/PPEiko-Regular.ttf);
 }
 :root {
   --colorBG: #f5f5f5;
